{
    "name": "GameInputActions",
    "maps": [
        {
            "name": "Gameplay",
            "id": "2587b553-b8da-47be-bb66-2a41ebff8c26",
            "actions": [
                {
                    "name": "TouchPress",
                    "type": "Button",
                    "id": "7bea0773-ed20-44c5-86ee-3e2df56e0830",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchPosition",
                    "type": "Value",
                    "id": "8f64adfc-144a-4a5b-b5e3-6fa7fd34f9dd",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "DebugSpecialCandy",
                    "type": "Button",
                    "id": "a6c486fd-1a9b-4d0f-a058-e18047bf0602",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "aba8464f-0d01-4b61-b410-0264a5d52213",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ffb1d477-1ebc-4145-a677-b260d2662738",
                    "path": "<Touchscreen>/Press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0d2d1879-3ee9-44dc-adc8-b6fdaebad3cb",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "89011288-2527-4f20-8c43-be5eb07815e9",
                    "path": "<Touchscreen>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e4e5807d-b16e-4a25-b302-dba040811302",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DebugSpecialCandy",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}